--- a/.gitignore
+++ b/.gitignore
@@ -93,9 +93,6 @@ dist
 
 # Gatsby files
 .cache/
-# Comment in the public line in if your project uses Gatsby and not Next.js
-# https://nextjs.org/blog/next-9-1#public-directory-support
-# public
 
 # vuepress build output
 .vuepress/dist
@@ -128,3 +125,27 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# IntelliJ IDEA specific files
+.idea/
+*.iml
+*.iws
+*.ipr
+
+# Maven build directory
+target/
+.mvn/
+pom.xml.tag
+pom.xml.releaseBackup
+dependency-reduced-pom.xml
+release.properties
+buildNumber.properties
+
+# Eclipse / STS specific files
+.classpath
+.project
+.settings/
+
+# Logs and temp files
+hs_err_pid*
+*.log
