--- a/portfolio-backend/pom.xml
+++ b/portfolio-backend/pom.xml
@@ -40,7 +40,7 @@
 			<artifactId>spring-boot-starter-data-mongodb</artifactId>
 		</dependency>
 
-		<!-- Spring Boot Validation -->
+		<!-- Spring Boot Validation (pour jakarta.validation) -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
@@ -85,6 +85,8 @@
 			<version>0.11.5</version>
 			<scope>runtime</scope>
 		</dependency>
+
+		<!-- Spring Boot Mail -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
@@ -93,6 +95,26 @@
 			<groupId>org.eclipse.angus</groupId>
 			<artifactId>angus-mail</artifactId>
 			<version>2.0.3</version>
+		</dependency>
+
+		<!-- Suppression de javax.annotation-api (inutile avec Java 21/Spring Boot 3.x) -->
+		<!-- <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+        </dependency> -->
+
+		<!-- SLF4J (inclus dans spring-boot-starter, pas besoin de l'ajouter explicitement sauf si version spécifique nécessaire) -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+		</dependency>
+
+		<!-- Bucket4j pour rate limiting -->
+		<dependency>
+			<groupId>com.github.vladimir-bukhtoyarov</groupId>
+			<artifactId>bucket4j-core</artifactId>
+			<version>8.10.1</version>
 		</dependency>
 
 		<!-- Spring Boot Starter Test -->
@@ -120,7 +142,7 @@
 							<path>
 								<groupId>org.projectlombok</groupId>
 								<artifactId>lombok</artifactId>
-								<version>1.18.30</version>
+								<version>1.18.34</version> <!-- Mise à jour vers une version récente -->
 							</path>
 						</annotationProcessorPaths>
 					</configuration>
