--- a/portfolio-backend/pom.xml
+++ b/portfolio-backend/pom.xml
@@ -101,7 +101,11 @@
 			<artifactId>angus-mail</artifactId>
 			<version>2.0.3</version>
 		</dependency>
-
+		<dependency>
+			<groupId>io.github.cdimascio</groupId>
+			<artifactId>dotenv-java</artifactId>
+			<version>3.0.2</version>
+		</dependency>
 		<!-- Suppression de javax.annotation-api (inutile avec Java 21/Spring Boot 3.x) -->
 		<!-- <dependency>
             <groupId>javax.annotation</groupId>
