--- a/portfolio-frontend/package.json
+++ b/portfolio-frontend/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "build:prod": "NODE_ENV=production vite build",
+    "start": "serve dist -p 5173 -s",
+    "prod": "yarn build:prod && yarn start",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -25,7 +28,8 @@
     "react-i18next": "^15.4.1",
     "react-phone-input-2": "^2.15.1",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.2.0"
+    "react-router-dom": "^7.2.0",
+    "vite-plugin-remove-console": "^2.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
@@ -36,6 +40,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
+    "serve": "^14.2.4",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.22.0",
     "vite": "^6.1.0"
