--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # Frontend (React/Vite)
   frontend:
@@ -7,12 +5,10 @@ services:
       context: ./portfolio-frontend
       dockerfile: Dockerfile
     ports:
-      - "5173:80" # Mapper le port 80 du conteneur au port 5173 de l'hôte
-    volumes:
-      - ./portfolio-frontend:/app
-      - /app/node_modules
+      - "5173:80"
     environment:
       - NODE_ENV=production
+      - REACT_APP_API_URL=http://backend:8080  # Ajoute cette ligne pour le frontend
 
   # Backend Spring Boot
   backend:
@@ -20,7 +16,7 @@ services:
       context: ./portfolio-backend
       dockerfile: Dockerfile
     ports:
-      - "8080:8080" # Mapper le port 8080 du conteneur au port 8080 de l'hôte
+      - "8080:8080"
     environment:
       - SPRING_MAIL_USERNAME=${SPRING_MAIL_USERNAME}
       - SPRING_MAIL_PASSWORD=${SPRING_MAIL_PASSWORD}
@@ -30,8 +26,6 @@ services:
       - APP_DEVELOPER_ID=${APP_DEVELOPER_ID}
     depends_on:
       - mongodb
-    volumes:
-      - ./portfolio-backend:/app
 
   # Serveur d'images Go
   image-server:
@@ -39,7 +33,7 @@ services:
       context: ./image-server
       dockerfile: Dockerfile
     ports:
-      - "7000:7000" # Mapper le port 7000 du conteneur au port 7000 de l'hôte
+      - "7000:7000"
     volumes:
       - ./image-server/public:/app/public
       - ./image-server/models:/app/models
@@ -48,7 +42,7 @@ services:
   mongodb:
     image: mongo:latest
     ports:
-      - "27017:27017" # Mapper le port 27017 du conteneur au port 27017 de l'hôte
+      - "27017:27017"
     volumes:
       - mongodb_data:/data/db
 
