--- a/portfolio-frontend/dockerfile
+++ b/portfolio-frontend/dockerfile
@@ -1,29 +1,14 @@
-# Utiliser une image Node.js légère comme base pour le build
+# Stage de build avec Node.js
 FROM node:20-alpine AS build
-
-# Définir le répertoire de travail
 WORKDIR /app
-
-# Copier les fichiers package.json et yarn.lock
 COPY package.json yarn.lock ./
-
-# Installer les dépendances avec Yarn
 RUN yarn install --frozen-lockfile
-
-# Copier tout le code source
 COPY . .
-
-# Construire l'application en mode production
 RUN yarn build:prod
 
-# Utiliser une image légère pour servir l'application (Nginx)
+# Stage runtime avec Nginx
 FROM nginx:alpine
-
-# Copier les fichiers de build dans le répertoire par défaut de Nginx
 COPY --from=build /app/dist /usr/share/nginx/html
-
-# Exposer le port 80 (par défaut pour Nginx)
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
-
-# Commande par défaut pour démarrer Nginx
 CMD ["nginx", "-g", "daemon off;"]
