--- a/portfolio-frontend/package.json
+++ b/portfolio-frontend/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
     "i18next": "^24.2.2",
     "i18next-browser-languagedetector": "^8.0.4",
     "i18next-http-backend": "^3.0.2",
