--- a/portfolio-frontend/package.json
+++ b/portfolio-frontend/package.json
@@ -30,12 +30,15 @@
     "react-phone-input-2": "^2.15.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
+    "sockjs-client": "^1.6.1",
+    "uuid": "^11.1.0",
     "vite-plugin-remove-console": "^2.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
+    "@types/sockjs-client": "^1",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.19.0",
     "eslint-plugin-react-hooks": "^5.0.0",
