--- a/portfolio-frontend/package.json
+++ b/portfolio-frontend/package.json
@@ -13,8 +13,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mui/material": "^6.4.7",
+    "@mui/x-date-pickers": "^7.27.3",
     "@reduxjs/toolkit": "^2.5.1",
+    "@types/react-datepicker": "^7.0.0",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "i18next": "^24.2.2",
@@ -24,9 +31,11 @@
     "lucide-react": "^0.475.0",
     "portfolio-frontend": "file:",
     "react": "^19.0.0",
+    "react-datepicker": "^8.1.0",
     "react-dom": "^19.0.0",
     "react-flagkit": "^2.0.4",
     "react-i18next": "^15.4.1",
+    "react-icons": "^5.5.0",
     "react-phone-input-2": "^2.15.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
