--- a/portfolio-frontend/package.json
+++ b/portfolio-frontend/package.json
@@ -40,6 +40,7 @@
     "react-phone-input-2": "^2.15.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
+    "react-transition-group": "^4.4.5",
     "sockjs-client": "^1.6.1",
     "styled-components": "^6.1.15",
     "uuid": "^11.1.0",
@@ -50,6 +51,7 @@
     "@types/react": "^19.0.8",
     "@types/react-beautiful-dnd": "^13",
     "@types/react-dom": "^19.0.3",
+    "@types/react-transition-group": "^4.4.12",
     "@types/sockjs-client": "^1",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.19.0",
