--- a/portfolio-backend/pom.xml
+++ b/portfolio-backend/pom.xml
@@ -149,7 +149,12 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-thymeleaf</artifactId>
     </dependency>
-
+    <!-- Javax Annotation pour @PostConstruct -->
+    <dependency>
+      <groupId>javax.annotation</groupId>
+      <artifactId>javax.annotation-api</artifactId>
+      <version>1.3.2</version>
+    </dependency>
     <!-- Dotenv Java -->
     <dependency>
       <groupId>io.github.cdimascio</groupId>
