--- a/portfolio-frontend/package.json
+++ b/portfolio-frontend/package.json
@@ -16,6 +16,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/material": "^6.4.7",
@@ -24,6 +25,7 @@
     "@types/react-datepicker": "^7.0.0",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
+    "emoji-picker-react": "^4.12.2",
     "i18next": "^24.2.2",
     "i18next-browser-languagedetector": "^8.0.4",
     "i18next-http-backend": "^3.0.2",
@@ -35,8 +37,10 @@
     "react-datepicker": "^8.2.0",
     "react-dom": "^19.0.0",
     "react-flagkit": "^2.0.4",
+    "react-giphy-searchbox": "^1.5.4",
     "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
+    "react-modal": "^3.16.3",
     "react-phone-input-2": "^2.15.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
@@ -51,6 +55,7 @@
     "@types/react": "^19.0.8",
     "@types/react-beautiful-dnd": "^13",
     "@types/react-dom": "^19.0.3",
+    "@types/react-modal": "^3",
     "@types/react-transition-group": "^4.4.12",
     "@types/sockjs-client": "^1",
     "@vitejs/plugin-react": "^4.3.4",
